force-app/main/default/objects/SFDC_CSP_Development_Request__c/SFDC_CSP_Development_Request__c.object-meta.xml
<CustomObject>
    <description>SFDC Customer Service Project</description>
    <label>Change Request</label>
    <nameField>
        <displayFormat>CR{0000000}</displayFormat>
        <label>Change Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>