force-app/main/default/objects/SFDC_CSP_Development_Request__c/fields/Child_Solution__c.field-meta.xml
<CustomField>
    <fullName>Child_Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Solution</label>
    <referenceTo>Solution</referenceTo>
    <relationshipName>Development_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>