force-app/main/default/objects/SFDC_CSP_Development_Request__c/fields/Escalation__c.field-meta.xml
<CustomField>
    <fullName>Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-019155 - Itesso SPT Migration - CR Object Customizations</description>
    <label>Escalation</label>
    <type>Checkbox</type>
</CustomField>