force-app/main/default/objects/SFDC_CSP_Development_Request__c/fields/Fix_Revision__c.field-meta.xml
<CustomField>
    <fullName>Fix_Revision__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fix Revision</label>
    <length>155</length>
    <type>Text</type>
</CustomField>