force-app/main/default/objects/SFDC_CSP_Development_Request__c/fields/InternalReleaseNotes__c.field-meta.xml
<CustomField>
    <fullName>InternalReleaseNotes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InternalReleaseNotes</label>
    <type>Checkbox</type>
</CustomField>