force-app/main/default/objects/SFDC_CSP_Development_Request__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>