force-app/main/default/objects/SFDC_CSP_Development_Request__c/fields/Number_of_Cases_Linked__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Cases_Linked__c</fullName>
    <defaultValue>0</defaultValue>
    <description>NICC-020860</description>
    <label>Number of Cases Linked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>