force-app/main/default/objects/SFDC_CSP_Development_Request__c/fields/Part__c.field-meta.xml
<CustomField>
    <fullName>Part__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Part</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SFDC_CSP_Part__c.Version__c</field>
            <operation>equals</operation>
            <valueField>$Source.Version__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SFDC_CSP_Part__c</referenceTo>
    <relationshipLabel>Change Requests</relationshipLabel>
    <relationshipName>Development_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>