force-app/main/default/objects/SFDC_CSP_Development_Request__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product Group</label>
    <referenceTo>Product_Group__c</referenceTo>
    <relationshipLabel>Change Requests</relationshipLabel>
    <relationshipName>Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>