force-app/main/default/objects/SFDC_CSP_Development_Request__c/fields/Product_Management_Priority__c.field-meta.xml
<CustomField>
    <fullName>Product_Management_Priority__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Management Priority</label>
    <length>155</length>
    <type>Text</type>
</CustomField>