force-app/main/default/objects/SFDC_CSP_Development_Request__c/fields/ProductVersion__c.field-meta.xml
<CustomField>
    <fullName>ProductVersion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ProductVersion</label>
    <length>155</length>
    <type>Text</type>
</CustomField>