force-app/main/default/objects/SFDC_CSP_Development_Request__c/fields/Public_Status__c.field-meta.xml
<CustomField>
    <fullName>Public_Status__c</fullName>
    <description>This is the public (customer facing) status of the CR</description>
    <label>Public Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Product Team Review</fullName>
            </value>
            <value>
                <fullName>Under Consideration</fullName>
            </value>
            <value>
                <fullName>On Roadmap</fullName>
            </value>
            <value>
                <fullName>Coming in the Next Release</fullName>
            </value>
            <value>
                <fullName>Partially Delivered</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Solutions Available</fullName>
            </value>
            <value>
                <fullName>Not Planned</fullName>
            </value>
            <value>
                <fullName>Existing Feature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>