force-app/main/default/objects/SFDC_CSP_Development_Request__c/fields/Public_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Public_Status_Description__c</fullName>
    <description>This is the public (customer facing) description of what the Public Status means</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Public Status Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>