force-app/main/default/objects/SFDC_CSP_Development_Request__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>