force-app/main/default/objects/SFDC_CSP_Development_Request__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>