force-app/main/default/objects/SFDC_CSP_Development_Request__c/fields/Return_to_Dev__c.field-meta.xml
<CustomField>
    <fullName>Return_to_Dev__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this check box sets the State to &quot;Product Team Review&quot; and the Reason to &quot;More Information Supplied&quot;</description>
    <inlineHelpText>Checking this check box sets the State to &quot;Product Team Review&quot; and the Reason to &quot;More Information Supplied&quot;</inlineHelpText>
    <label>Return to Dev</label>
    <type>Checkbox</type>
</CustomField>