force-app/main/default/objects/SFDC_CSP_Development_Request__c/fields/SO_Component__c.field-meta.xml
<CustomField>
    <fullName>SO_Component__c</fullName>
    <description>Requested and managed by John Heimann. NICC - 023242</description>
    <inlineHelpText>Identifies the component with Service Optimization that the customer is calling about.</inlineHelpText>
    <label>SO Component</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Assigned_Product_Line__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SO_Component</valueSetName>
    </valueSet>
</CustomField>