force-app/main/default/objects/SFDC_CSP_Development_Request__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State</label>
    <length>155</length>
    <type>Text</type>
</CustomField>