force-app/main/default/objects/SFDC_CSP_Development_Request__c/fields/Support_Priority__c.field-meta.xml
<CustomField>
    <fullName>Support_Priority__c</fullName>
    <label>Customer Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Urgent</fullName>
            </value>
            <value>
                <fullName>2 - High</fullName>
            </value>
            <value>
                <fullName>3 - Medium</fullName>
            </value>
            <value>
                <fullName>4 - Low</fullName>
            </value>
            <value>
                <fullName>Please Specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>