force-app/main/default/objects/SFDC_CSP_Development_Request__c/fields/TFS_Defect_Link__c.field-meta.xml
<CustomField>
    <fullName>TFS_Defect_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TFS Defect Link</label>
    <type>Url</type>
</CustomField>