force-app/main/default/objects/SFDC_CSP_Development_Request__c/fields/TFS_EnhancementID__c.field-meta.xml
<CustomField>
    <fullName>TFS_EnhancementID__c</fullName>
    <description>Added per John Heimann for the TFS Integration
NICC-004972</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Added per John Heimann for the TFS Integration</inlineHelpText>
    <label>TFS EnhancementID</label>
    <length>155</length>
    <type>Text</type>
</CustomField>