force-app/main/default/objects/SFDC_CSP_Development_Request__c/fields/TFS_ID__c.field-meta.xml
<CustomField>
    <fullName>TFS_ID__c</fullName>
    <description>ID of the linked CR workitem in TFS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TFS ID</label>
    <length>155</length>
    <type>Text</type>
</CustomField>