force-app/main/default/objects/SFDC_CSP_Development_Request__c/fields/TFS_Version__c.field-meta.xml
<CustomField>
    <fullName>TFS_Version__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TFS Version</label>
    <length>155</length>
    <type>Text</type>
</CustomField>