force-app/main/default/objects/SFDC_CSP_Development_Request__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Version</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SFDC_CSP_Version__c.Product_Group__c</field>
            <operation>equals</operation>
            <valueField>$Source.Product_Group__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SFDC_CSP_Version__c</referenceTo>
    <relationshipLabel>Change Requests</relationshipLabel>
    <relationshipName>Development_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>