force-app/main/default/objects/SFDC_CSP_Development_Request__c/fields/VSTS_Number__c.field-meta.xml
<CustomField>
    <fullName>VSTS_Number__c</fullName>
    <description>NICC-031129

PBI or BUG number from VSTS Application used by the Breda PMS Team. This field is manual updated by users in the Breda Office</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>PBI or BUG number from VSTS Application used by the Breda PMS Team. This field is manual updated by users in the Breda Office</inlineHelpText>
    <label>VSTS Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>