force-app/main/default/objects/SFDC_CSP_Development_Request__c/validationRules/CR_Product_Group_May_Not_Be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>CR_Product_Group_May_Not_Be_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( 
NOT($Profile.Name = &quot;NI Administrator&quot;),
NOT($Profile.Name = &quot;System Administrator&quot;), 
NOT($Profile.Name = &quot;NI Solutions Managers&quot;),
ISBLANK(Product_Group__c) 
)</errorConditionFormula>
    <errorDisplayField>Product_Group__c</errorDisplayField>
    <errorMessage>Please choose a product group.</errorMessage>
</ValidationRule>