force-app/main/default/objects/SFDC_CSP_Development_Request__c/validationRules/CR_Support_Priority_May_Not_Be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>CR_Support_Priority_May_Not_Be_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( 
NOT($Profile.Name = &quot;NI Administrator&quot;),
NOT($Profile.Name = &quot;System Administrator&quot;), 
NOT($Profile.Name = &quot;NI Solutions Managers&quot;),
ISPICKVAL(Support_Priority__c ,&quot;&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Support_Priority__c</errorDisplayField>
    <errorMessage>Please choose a priority.</errorMessage>
</ValidationRule>