force-app/main/default/objects/SFDC_CSP_Development_Request__c/validationRules/CR_Type_May_Not_Be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>CR_Type_May_Not_Be_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
NOT($Profile.Name = &quot;NI Administrator&quot;),
NOT($Profile.Name = &quot;System Administrator&quot;), 
NOT($Profile.Name = &quot;NI Solutions Managers&quot;),
ISPICKVAL(Type__c ,&quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Please choose a type.</errorMessage>
</ValidationRule>