force-app/main/default/objects/SFDC_CSP_Development_Request__c/validationRules/CR_Version_May_Not_Be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>CR_Version_May_Not_Be_Blank</fullName>
    <active>false</active>
    <errorConditionFormula>AND ( 
NOT($Profile.Name = &quot;NI Administrator&quot;),
NOT($Profile.Name = &quot;System Administrator&quot;), 
NOT($Profile.Name = &quot;NI Solutions Managers&quot;),
ISBLANK(Version__c) 
)</errorConditionFormula>
    <errorDisplayField>Version__c</errorDisplayField>
    <errorMessage>Please choose a version.</errorMessage>
</ValidationRule>