force-app/main/default/objects/SFDC_CSP_Development_Request__c/validationRules/PMS_Update_Public_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>PMS_Update_Public_Status</fullName>
    <active>false</active>
    <description>NICC-019466

Prevents the Public Status field from being changed on CRs that do not have a Product Group of &quot;PMS&quot;.This was originally created for the Breda Office while they are not integrated to TFS.  They need to update the Public Status field.</description>
    <errorConditionFormula>(
AND(
ISNEW(),Product_Group__r.Name != &quot;PMS&quot;, NOT(ISPICKVAL( Public_Status__c,&quot;&quot;)),
NOT(CONTAINS($User.Username, &quot;suser@newmarketinc.com&quot;))
)
)
||
(
AND(
ISCHANGED(Public_Status__c), Product_Group__r.Name != &quot;PMS&quot;,
NOT(CONTAINS($User.Username, &quot;suser@newmarketinc.com&quot;))
)
)</errorConditionFormula>
    <errorDisplayField>Public_Status__c</errorDisplayField>
    <errorMessage>You are not authorized to change the Public Status on this CR</errorMessage>
</ValidationRule>