force-app/main/default/objects/SFDC_CSP_Development_Request__c/validationRules/PMS_Update_Public_Status_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>PMS_Update_Public_Status_Description</fullName>
    <active>false</active>
    <description>NICC-01946
Prevents the Public Status Description field from being changed on CRs that do not have a Product Group of &quot;PMS&quot; .originally created for the Breda Office while they are not integrated to TFS.</description>
    <errorConditionFormula>(
AND(
    ISNEW(),Product_Group__r.Name != &quot;PMS&quot;,   
    NOT(ISBLANK(Public_Status_Description__c)),
    NOT(CONTAINS($User.Username, &quot;suser@newmarketinc.com&quot;))
)
)
||
( 
AND(
    ISCHANGED(Public_Status_Description__c), Product_Group__r.Name != &quot;PMS&quot;,
    NOT(CONTAINS($User.Username, &quot;suser@newmarketinc.com&quot;))
)
)</errorConditionFormula>
    <errorDisplayField>Public_Status_Description__c</errorDisplayField>
    <errorMessage>You are not authorized to change the Public Status Description of this CR</errorMessage>
</ValidationRule>