force-app/main/default/objects/SFDC_CSP_Development_Request__c/validationRules/PMS_Update_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>PMS_Update_Reason</fullName>
    <active>true</active>
    <description>NICC-019466
Prevents the Reason field from being changed on CRs that do not have a Product Group of &quot;PMS&quot;

This was originally created for the Breda Office while they are not integrated to TFS. They need to update the Reason field.</description>
    <errorConditionFormula>(
AND(
ISNEW(),Product_Group__r.Name != &quot;PMS&quot;, NOT(ISBLANK(Reason__c)),
NOT(CONTAINS($User.Username, &quot;suser@newmarketinc.com&quot;))
)
)
||
(
AND(
ISCHANGED(Reason__c), Product_Group__r.Name != &quot;PMS&quot;,
NOT(CONTAINS($User.Username, &quot;suser@newmarketinc.com&quot;))
)
)</errorConditionFormula>
    <errorDisplayField>Reason__c</errorDisplayField>
    <errorMessage>You are not authorized to change the Reason of this CR</errorMessage>
</ValidationRule>