force-app/main/default/objects/SFDC_CSP_Development_Request__c/validationRules/PMS_Update_State.validationRule-meta.xml
<ValidationRule>
    <fullName>PMS_Update_State</fullName>
    <active>true</active>
    <description>NICC-019466
Prevents the State field from being changed on CRs that do not have a Product Group of &quot;PMS&quot;

This was originally created for the Breda Office while they are not integrated to TFS. They need to update the State field.</description>
    <errorConditionFormula>(
AND(
    ISNEW(),Product_Group__r.Name != &quot;PMS&quot;,   
    NOT(ISBLANK(State__c)),
    NOT(CONTAINS($User.Username, &quot;suser@newmarketinc.com&quot;))
)
)
||
( 
AND(
    ISCHANGED(State__c), Product_Group__r.Name != &quot;PMS&quot;,
    NOT(CONTAINS($User.Username, &quot;suser@newmarketinc.com&quot;))
)
)</errorConditionFormula>
    <errorDisplayField>State__c</errorDisplayField>
    <errorMessage>You are not authorized to change the State of this CR</errorMessage>
</ValidationRule>