force-app/main/default/objects/SFDC_CSP_Development_Request__c/validationRules/SO_Compenent_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>SO_Compenent_Required</fullName>
    <active>true</active>
    <description>Requested and managed by John Heimann. NICC - 023242 .</description>
    <errorConditionFormula>AND
(
ISPICKVAL(Assigned_Product_Line__c , &quot;HotSOS&quot;),
ISPICKVAL(SO_Component__c , &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>SO_Component__c</errorDisplayField>
    <errorMessage>SO Component value is required for HotSOS Assigned Product Line.</errorMessage>
</ValidationRule>