force-app/main/default/objects/SFDC_CSP_Development_Request__c/listViews/All_96_CRs.listView-meta.xml
<ListView>
    <fullName>All_96_CRs</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Version__c</columns>
    <columns>Part__c</columns>
    <columns>Product_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Version__c</field>
        <operation>contains</operation>
        <value>9.6</value>
    </filters>
    <label>All 9.6 CRs</label>
</ListView>