force-app/main/default/objects/SFDC_CSP_Development_Request__c/listViews/CRs_with_no_Solution.listView-meta.xml
<ListView>
    <fullName>CRs_with_no_Solution</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Version__c</columns>
    <columns>Part__c</columns>
    <columns>Product_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Child_Solution__c</field>
        <operation>equals</operation>
    </filters>
    <label>CRs with no Solution</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>