force-app/main/default/objects/SFDC_CSP_Development_Request__c/listViews/PMS_All_CRs.listView-meta.xml
<ListView>
    <fullName>PMS_All_CRs</fullName>
    <columns>NAME</columns>
    <columns>Product_Group__c</columns>
    <columns>Assigned_Product_Line__c</columns>
    <columns>Description__c</columns>
    <columns>Support_Priority__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Number_of_Cases_Linked__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Group__c</field>
        <operation>contains</operation>
        <value>PMS</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2021 12:00 AM</value>
    </filters>
    <label>PMS - All CRs 2021+</label>
    <language>en_US</language>
</ListView>