force-app/main/default/objects/SFDC_CSP_Development_Request__c/listViews/PMS_IDPMS.listView-meta.xml
<ListView>
    <fullName>PMS_IDPMS</fullName>
    <columns>NAME</columns>
    <columns>Product_Group__c</columns>
    <columns>Assigned_Product_Line__c</columns>
    <columns>Description__c</columns>
    <columns>Support_Priority__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Group__c</field>
        <operation>contains</operation>
        <value>PMS</value>
    </filters>
    <filters>
        <field>Assigned_Product_Line__c</field>
        <operation>equals</operation>
        <value>IDPMS</value>
    </filters>
    <label>PMS - IDPMS</label>
</ListView>