force-app/main/default/objects/SFDC_CSP_Development_Request__c/listViews/X9_5_3_CR_s_I_think.listView-meta.xml
<ListView>
    <fullName>X9_5_3_CR_s_I_think</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Version__c</columns>
    <columns>State__c</columns>
    <columns>Fix_Revision__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Version__c</field>
        <operation>contains</operation>
        <value>v9.5.3</value>
    </filters>
    <label>9.5.3 CR&apos;s</label>
</ListView>